Fixation des probleme Flask et probleme de lien avec gcloud

--- a/templates/moyenne_expo.html
+++ b/templates/moyenne_expo.html
@@ -9,7 +9,7 @@
         <p>La moyenne exponentielle est une technique couramment utilisée en analyse technique pour évaluer les tendances du marché. Elle accorde plus de poids aux données récentes, ce qui la rend plus réactive aux changements de prix. Cela en fait un outil précieux pour les traders qui cherchent à identifier les signaux d'achat ou de vente.</p>
         <div class="columns-container">
             <div class="column">
-                <canvas src="/Users/fahad/Documents/Projet/graph/graph_evolution.png" alt="Graphique 1" width="700">
+                <img src="static/graph/graph_evolution.png" alt="Graphique 1" width="700">
             </div>
             <div class="column">
                 <p>Le graphique met en évidence une diminution des deux moyennes mobiles exponentielles (EMA) au fil du temps, suggère une tendance baissière sur la période considérée. Les EMA sont des outils d'analyse technique utilisés pour évaluer les mouvements de prix à court terme. Lorsque les deux EMA diminuent progressivement, cela indique que les prix récents sont inférieurs aux prix passés, révélant ainsi une pression baissière sur le marché. Les investisseurs pourraient interpréter cette tendance à la baisse comme une opportunité de vendre leurs actifs ou cryptomonnaies, ou encore comme un signal de consolidation avant une possible reprise haussière.</p>
@@ -19,7 +19,6 @@
 
     </header>
     <main>
-        <!-- Add content related to Moyenne exponentielle section here -->
     </main>
 </body>
 </html>
