Probleme lier a l'execution de l'application Flask sur AppEngine

--- a/templates/croisement_moyennes_mobiles.html
+++ b/templates/croisement_moyennes_mobiles.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Croisement des moyennes mobiles</title>
+    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/custom.css">
 </head>
 <body>
     <main>
