--- a/templates/moyenne_expo.html
+++ b/templates/moyenne_expo.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Moyenne exponentielle</title>
+    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/custom.css">
 </head>
 <body>
     <header>
